Corrected the responsiveness of movie covers

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -110,7 +110,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1rem;
-        grid-template-columns: repeat(1, 240px)
+        grid-template-columns: repeat(1, auto)
     }
 }
 
@@ -118,7 +118,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1rem;
-        grid-template-columns: repeat(2, 150px)
+        grid-template-columns: repeat(2, auto)
     }
 }
 
@@ -127,7 +127,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1rem;
-        grid-template-columns: repeat(2,200px)
+        grid-template-columns: repeat(2,auto)
     }
 }
 
@@ -135,7 +135,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1rem;
-        grid-template-columns: repeat(3, 180px)
+        grid-template-columns: repeat(3, auto)
     }
 }
 
@@ -144,7 +144,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1rem;
-        grid-template-columns: repeat(4, 170px)
+        grid-template-columns: repeat(4, auto)
     }
 }
 
@@ -153,7 +153,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1rem;
-        grid-template-columns: repeat(5, 180px)
+        grid-template-columns: repeat(5, auto)
     }
 }
 
@@ -161,7 +161,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1rem;
-        grid-template-columns: repeat(6, 180px)
+        grid-template-columns: repeat(6, auto)
     }
 }
 
@@ -169,7 +169,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1.5rem;
-        grid-template-columns: repeat(6,220px)
+        grid-template-columns: repeat(6,auto)
     }
 }
 
@@ -177,7 +177,7 @@ body {
     .movies_container {
         display: grid;
         gap: 1.5rem;
-        grid-template-columns: repeat(8,200px)
+        grid-template-columns: repeat(8, auto)
     }
 }
 
